src/test/deca/context/invalid/cast-notASubClass.context
cast-notASubClass.deca:18:
